--- a/inventory/group_vars/private.yaml
+++ b/inventory/group_vars/private.yaml
@@ -1,20 +1,12 @@
 ---
-log_notice: "/var/log/tor/notice.log"
-log_warn: "/var/log/tor/warn.log"
-log_err: "/var/log/tor/err.log"
-
-torrc_generic:
+torrc_config:
+  - name: "BridgeDistribution"
+    value: "none"
   - name: "Log notice file"
     value: "{{ log_notice }}"
   - name: "Log warn file"
     value: "{{ log_warn }}"
   - name: "Log err file"
     value: "{{ log_err }}"
-
-torrc_private:
-  - name: "BridgeDistribution"
-    value: "none"
   - name: "PublishServerDescriptor"
     value: "0" # 1 when https://gitlab.torproject.org/tpo/core/tor/-/issues/40584 is solved
-
-torrc_config: "{{ torrc_generic + torrc_private }}"
