--- a/playbooks/roles/info-snowflake/tasks/uptime.yaml
+++ b/playbooks/roles/info-snowflake/tasks/uptime.yaml
@@ -2,7 +2,7 @@
 - name: Get service status
   ansible.builtin.systemd:
     name: snowflake-proxy
-  register: snowflake_status
+  register: _service
 
 - name: Uptime
   changed_when: false
@@ -15,6 +15,6 @@
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} SFStart {{ snowflake_status.status.ExecMainStartTimestamp }} SFReload {{ snowflake_status.status.StateChangeTimestamp }} uptime {{ _result.stdout }}"
+    line: "{{ ansible_facts.hostname }} SFStart {{ _service.status.ExecMainStartTimestamp }} SFReload {{ _service.status.StateChangeTimestamp }} uptime {{ _result.stdout }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_uptime"
     regex: "^{{ ansible_facts.hostname }} "
