--- a/playbooks/roles/info-snowflake/tasks/version.yaml
+++ b/playbooks/roles/info-snowflake/tasks/version.yaml
@@ -6,28 +6,11 @@
   register: _proxy_version
   failed_when: (_proxy_version.stdout_lines | length != 1) or (_proxy_version.stderr_lines | length > 0)
 
-- name: Get HEAD of repository
-  become: true
-  become_user: snowflake
-  changed_when: false
-  ansible.builtin.command: git describe --tags --always --long --dirty # noqa: command-instead-of-module
-  args:
-    chdir: "{{ snowflake_repo_dir }}"
-  register: _git_version
-  failed_when: (_git_version.stdout_lines | length != 1) or (_git_version.stderr_lines | length > 0)
-
-- name: Go version
-  changed_when: false
-  ansible.builtin.shell: >-
-    go version 2>&1 | cut -f 3 -d ' '
-  register: _go_version
-  failed_when: (_go_version.stdout_lines | length != 1) or (_go_version.stderr_lines | length > 0)
-
 - name: File version
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ _proxy_version.stdout_lines[0] }} {{ _git_version.stdout_lines[0] }} {{ _go_version.stdout_lines[0] }}"
+    line: "{{ ansible_facts.hostname }} {{ _proxy_version.stdout_lines[0] }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_version"
     regex: "^{{ ansible_facts.hostname }} "
