--- a/playbooks/roles/info-tor/tasks/version.yaml
+++ b/playbooks/roles/info-tor/tasks/version.yaml
@@ -9,14 +9,21 @@
     tor --version |
     grep -m 1 '^Tor version' |
     awk '{ print $3 }'
-  register: _result
-  failed_when: (_result.stdout_lines | length != 1) or (_result.stderr_lines | length > 0)
+  register: _tor
+  failed_when: (_tor.stdout_lines | length != 1) or (_tor.stderr_lines | length > 0)
+
+- name: Proxy version
+  changed_when: false
+  ansible.builtin.shell: |
+    /usr/bin/{{ (tor_vendor == 'git') | ternary('lyrebird', 'obfs4proxy') }} --version
+  register: _proxy
+  failed_when: (_proxy.stdout_lines | length != 1) or (_proxy.stderr_lines | length > 0)
 
 - name: File version
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ ansible_facts.packages['tor'][0].version }} {{ ansible_facts.packages['obfs4proxy'][0].version }} {{ _result.stdout_lines[0] }}"
+    line: "{{ ansible_facts.hostname }} {{ ansible_facts.packages['tor'][0].version | default('n/a') }} {{ ansible_facts.packages['obfs4proxy'][0].version | default('n/a') }} {{ _tor.stdout_lines[0] }}  {{ _proxy.stdout_lines[0] }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_version"
     regex: "^{{ ansible_facts.hostname }} "
