--- a/playbooks/roles/setup/tasks/network.yaml
+++ b/playbooks/roles/setup/tasks/network.yaml
@@ -2,12 +2,6 @@
 # goal:     enlarge the cost of a network scanner for an IPv6 scan of the obfs4 port
 # solution: set the default <prefix>::1 IPv6 address to arbitrarily choosen address
 #           and re-route incoming ipv6 traffic to it, exception: the destination port is the obfs4 port
-- name: Gather ipv6 facts
-  ansible.builtin.setup:
-    gather_subset:
-      - "!all"
-      - "all_ipv6_addresses"
-
 - name: Derive ipv6 prefix from current ipv6 address
   ansible.builtin.set_fact:
     _ipv6_prefix: "{{ (_ipv6_old | split(':'))[:4] | join(':') }}"
@@ -42,12 +36,6 @@
     daemon_reload: true
     enabled: true
 
-- name: Gather ipv6 facts again
-  ansible.builtin.setup:
-    gather_subset:
-      - "!all"
-      - "all_ipv6_addresses"
-
 - name: Prereoute incoming ipv6 traffic to the new ipv6 address if needed
   module_defaults:
     ansible.builtin.iptables:
@@ -63,12 +51,12 @@
         table: nat
         flush: yes
     - name: DNAT incoming TCP v6 except obfs4 port
-      when: (obfs4_port is defined) and (obfs4_port > 0) and (obfs4_port < 2**16)
+      when: (obfs4_port > 0) and (obfs4_port < 2**16)
       ansible.builtin.iptables:
         protocol: tcp
         destination_ports: "1:{{ obfs4_port - 1 }},{{ obfs4_port + 1 }}:65535"
     - name: DNAT incoming TCP v6
-      when: not ((obfs4_port is defined) and (obfs4_port > 0) and (obfs4_port < 2**16))
+      when: not ((obfs4_port > 0) and (obfs4_port < 2**16))
       ansible.builtin.iptables:
         protocol: tcp
     - name: DNAT incoming non-TCP v6
