--- a/playbooks/roles/setup-tor/tasks/tor-config.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-config.yaml
@@ -3,7 +3,7 @@
   ansible.builtin.template:
     src: torrc.j2
     dest: /etc/tor/torrc
-  register: _torrc
+  register: _config
 
 - name: Restart Tor service
   ansible.builtin.service:
@@ -11,7 +11,7 @@
     state: restarted
     daemon_reload: true
     enabled: true
-  when: (_binary.changed | default(false)) or _torrc.changed or (_service.changed | default(false))
+  when: (_binary.changed | default(false)) or _config.changed or (_service.changed | default(false))
 
 - name: Ensure Tor service is started
   ansible.builtin.service:
