--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -32,6 +32,14 @@
       ansible.builtin.import_tasks: network.yaml
       tags:
         - network
+    - name: Gather ipv6 facts
+      ansible.builtin.setup:
+        gather_subset:
+          - "!all"
+          - "all_ipv6_addresses"
+          - "default_ipv6"
+      tags:
+        - network
     - name: Timer
       ansible.builtin.import_tasks: timer.yaml
       tags:
