--- a/playbooks/roles/info-tor/tasks/log-err.yaml
+++ b/playbooks/roles/info-tor/tasks/log-err.yaml
@@ -2,7 +2,9 @@
 - name: Check error log
   changed_when: false
   ansible.builtin.shell: >-
-    grep -h -v -e 'opening .*log file.' {{ log_err }}.1 {{ log_err }} 2>/dev/null
+    grep -h -v -e 'opening .*log file.' {{ log_err }}.1 {{ log_err }} 2>/dev/null |
+    tail -n {{ log_lines }}
+
   register: _result
   failed_when: _result.stderr_lines | length > 0
 
