--- a/playbooks/roles/info/defaults/main.yaml
+++ b/playbooks/roles/info/defaults/main.yaml
@@ -5,3 +5,5 @@ log_unattended: "/var/log/unattended-upgrades/unattended-upgrades-dpkg.log"
 log_system_since: "3 days ago"
 
 metrics_port: 0
+
+prometheus_server: ""
