--- a/playbooks/roles/setup-snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/main.yaml
@@ -1,4 +1,10 @@
 ---
+- name: Validate
+  ansible.builtin.import_tasks: validate.yaml
+  tags:
+    - always
+    - validate
+
 - name: Main
   module_defaults:
     ansible.builtin.apt:
