--- a/playbooks/roles/setup-snowflake/tasks/firewall.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/firewall.yaml
@@ -40,7 +40,7 @@
         sysctl_file: /etc/sysctl.d/21tor-snowflake.conf
         sysctl_set: true
 
-- name: Save new iptables
+- name: Save iptables state
   community.general.iptables_state:
     ip_version: "{{ 'ip' + item }}"
     state: saved
