hopefully fix caching effects

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,11 +7,10 @@ pipelining = True
 poll_interval = 5
 strategy = free
 
+gathering = implicit
 inject_facts_as_vars = false
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
-fact_caching_timeout = 86400
-gathering = smart
 
 no_target_syslog = True
 
