--- a/playbooks/roles/setup-tor/tasks/tor-lyrebird.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-lyrebird.yaml
@@ -17,9 +17,9 @@
 - name: Apply patches
   become: true
   become_user: tor
-  ansible.builtin.shell: |
-    cd /home/tor/lyrebird
-    curl -s {{ item }} | patch -p 1
+  ansible.builtin.shell: curl -s {{ item }} | patch -p 1
+  args:
+    chdir: /home/tor/lyrebird
   loop_control:
     label: "{{ item }}"
   loop: "{{ lyrebird_patches }}"
@@ -27,9 +27,9 @@
 - name: Build Lyrebird
   become: true
   become_user: tor
-  ansible.builtin.command: "go build ./cmd/lyrebird"
+  ansible.builtin.command: go build ./cmd/lyrebird
   args:
-    chdir: "/home/tor/lyrebird"
+    chdir: /home/tor/lyrebird
 
 - name: Copy Lyrebird
   ansible.builtin.copy:
