unify shell/command syntax

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,7 +4,6 @@ interpreter_python = /usr/bin/python3
 forks = 32
 order = sorted
 pipelining = True
-poll_interval = 5
 strategy = free
 
 gathering = implicit
@@ -12,8 +11,9 @@ inject_facts_as_vars = false
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
 
+display_skipped_hosts = false
 no_target_syslog = True
 
 remote_user = root
 
-#ssh_args = -o Compression=yes
+ssh_args = -o Compression=no
