--- a/playbooks/roles/info-tor/tasks/log-notice.yaml
+++ b/playbooks/roles/info-tor/tasks/log-notice.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Get last {{ log_lines }} lines of {{ log_notice }}
   changed_when: false
-  ansible.builtin.shell: >-
+  ansible.builtin.shell: |
     grep -h -v -e 'The IPv4 ORPort address 127.0.0.1 does not match the descriptor address' {{ log_notice }}.1 {{ log_notice }} 2>/dev/null |
     tail -n {{ log_lines }}
   register: _result
