--- a/playbooks/roles/info/tasks/log-system.yaml
+++ b/playbooks/roles/info/tasks/log-system.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Grep system log since {{ log_system_since }}
   changed_when: false
-  ansible.builtin.shell: >-
+  ansible.builtin.shell: |
     journalctl -g 'BUG:' -g 'Call Trace:' -g 'oom-kill' -g 'RIP:' -g 'WARNING:' -g 'OOM' -g 'status=9/KILL' -g '.service: Failed' --since "{{ log_system_since }}" -q |
     tail -n {{ log_lines }}
   register: _result
