--- a/playbooks/roles/info-snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info-snowflake/tasks/connections.yaml
@@ -1,8 +1,11 @@
 ---
 - name: Get last 30 connections stats messages (sorted from newest to oldest)
   changed_when: false
-  ansible.builtin.shell: >-
-    journalctl -u snowflake-proxy --since "1 hour ago" -r -g ', there were .* connections' -q | tail -n 30 | awk '{ print $14 }' | xargs
+  ansible.builtin.shell: |
+    journalctl -u snowflake-proxy --since "1 hour ago" -r -g ', there were .* connections' -q |
+    tail -n 30 |
+    awk '{ print $14 }' |
+    xargs
   register: _result
 
 - name: File connections
