--- a/playbooks/roles/info-snowflake/tasks/version.yaml
+++ b/playbooks/roles/info-snowflake/tasks/version.yaml
@@ -1,8 +1,9 @@
 ---
 - name: Snowflake version
   changed_when: false
-  ansible.builtin.shell: >-
-    /usr/bin/proxy --version 2>&1 | cut -f 2- -d ' '
+  ansible.builtin.shell: |
+    /usr/bin/proxy --version 2>&1 |
+    cut -f 2- -d ' '
   register: _proxy_version
   failed_when: (_proxy_version.stdout_lines | length != 1) or (_proxy_version.stderr_lines | length > 0)
 
