--- a/playbooks/roles/info/tasks/firewall.yaml
+++ b/playbooks/roles/info/tasks/firewall.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Firewall ct drops
   changed_when: false
-  ansible.builtin.shell: >-
+  ansible.builtin.shell: |
     conntrack -S | grep -v ' insert_failed=0 drop=0 ' | awk '{ print $1, $5, $6 }' | cut -f 2- -d ':' | xargs
   register: _result
 
