--- a/playbooks/roles/info/tasks/uname.yaml
+++ b/playbooks/roles/info/tasks/uname.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Uname
   changed_when: false
-  ansible.builtin.command: "uname -rv"
+  ansible.builtin.command: uname -rv
   register: _result
 
 - name: File uname
