--- a/playbooks/roles/info-tor/tasks/clients.yaml
+++ b/playbooks/roles/info-tor/tasks/clients.yaml
@@ -15,6 +15,6 @@
   throttle: 1
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ _result.stdout }}"
+    line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_clients"
-    regex: "^{{ ansible_facts.hostname }} "
+    regex: "^{{ inventory_hostname }} "
